--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
-    <title>Title</title>
+    <title>写一个字</title>
     <link rel="stylesheet" href="font/style.css">
 </head>
 <body>
