--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="clear_btn">清除</div>
     <div class="clearfix"></div>
 </div>
+<a href="mac/mac.html"></a>
 <script src="font/common.js"></script>
 <script src="font/js.js"></script>
 </body>
