--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="color-btn" id="color-blue"></div>
     <div class="color-btn" id="color-red"></div>
     <div class="color-btn" id="color-yellow"></div>
-    <div id="clear_btn">清    除</div>
+    <div id="clear_btn">清3除</div>
     <div class="clearfix"></div>
 </div>
 <a href="mac/mac.html">mac</a>
