--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
     <title>写一个字</title>
-    <link rel="stylesheet" href="font/style.css">
 </head>
 <body>
-<canvas id="canvas"></canvas>
-<div class="control">
-    <div class="color-btn selected-color" id="color-black"></div>
-    <div class="color-btn" id="color-green"></div>
-    <div class="color-btn" id="color-blue"></div>
-    <div class="color-btn" id="color-red"></div>
-    <div class="color-btn" id="color-yellow"></div>
-    <div id="clear_btn">清 除</div>
-    <div class="clearfix"></div>
-</div>
+
 <a href="mac/mac.html">mac</a>
-<script src="font/common.js"></script>
-<script src="font/js.js"></script>
+<a href="canvas/html/writing.html">mac</a>
+
 </body>
 </html>
