--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<a href="mac/mac.html">mac</a>
-<a href="canvas/html/writing.html">mac</a>
+<a href="mac/mac.html">MAC</a>
+<a href="canvas/html/writing.html">CANVAS</a>
 
 </body>
 </html>
