--- a/canvas/html/writing.html
+++ b/canvas/html/writing.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
     <title>写字</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
