--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <a href="mac/mac.html"> MAC </a>
 <a href="canvas/html/writing.html"> CANVAS </a>
+<a href="http://www.rongcloud.cn/docs/"> 融云 </a>
 
 </body>
 </html>
