--- a/mac/mac.html
+++ b/mac/mac.html
@@ -9,5 +9,7 @@
 <p>defaults write com.apple.finder AppleShowAllFiles Yes && killall Finder</p>
 <h1>mac不现实隐藏文件命令</h1>
 <p>defaults write com.apple.finder AppleShowAllFiles No && killall Finder</p>
+<h1>mac命令行安装需要管理员权限Please try running this command again as root/Administrator</h1>
+<p>sudo chown -R $USER /usr/local</p>
 </body>
 </html>
