--- a/mac/mac.html
+++ b/mac/mac.html
@@ -11,5 +11,7 @@
 <p>defaults write com.apple.finder AppleShowAllFiles No && killall Finder</p>
 <h1>mac命令行安装需要管理员权限Please try running this command again as root/Administrator</h1>
 <p>sudo chown -R $USER /usr/local</p>
+<h1>MAC 更改个人目录名称</h1>
+<img src="image/mac1.png" alt="更改个人的目录名称">
 </body>
 </html>
