--- a/mac/mac.html
+++ b/mac/mac.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script type="text/javascript" src="js/common.js"></script>
 </head>
 <body>
-<h1>mac显示隐藏文件命令</h1>
-<p>defaults write com.apple.finder AppleShowAllFiles Yes && killall Finder</p>
-<h1>mac不现实隐藏文件命令</h1>
-<p>defaults write com.apple.finder AppleShowAllFiles No && killall Finder</p>
-<h1>mac命令行安装需要管理员权限Please try running this command again as root/Administrator</h1>
-<p>sudo chown -R $USER /usr/local</p>
-<h1>MAC 更改个人目录名称</h1>
-<img src="image/mac1.jpg" alt="更改个人的目录名称">
+<h1 class="title">mac显示隐藏文件命令</h1>
+<div class="content">defaults write com.apple.finder AppleShowAllFiles Yes && killall Finder</div>
+<h1 class="title">mac不现实隐藏文件命令</h1>
+<div class="content">defaults write com.apple.finder AppleShowAllFiles No && killall Finder</div>
+<h1 class="title">mac命令行安装需要管理员权限Please try running this command again as root/Administrator</h1>
+<div class="content">sudo chown -R $USER /usr/local</div>
+<h1 class="title">MAC 更改个人目录名称</h1>
+<div class="content">
+    <img class="mac_change_name" src="image/mac1.jpg" alt="更改个人的目录名称">
+</div>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
