--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href="mac/mac.html"> MAC </a>
 <a href="canvas/html/writing.html"> CANVAS </a>
 <a href="http://www.rongcloud.cn/docs/"> 融云 </a>
+<a href="test/html/h/newCreditScoreAnimation.html"> 测试 </a>
 
 </body>
 </html>
