--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<style>
+    html{
+        font-size: 16px;
+    }
+    a{
+        font-size: 1rem;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
@@ -11,6 +19,7 @@
 <a href="canvas/html/writing.html"> CANVAS </a>
 <a href="http://www.rongcloud.cn/docs/"> 融云 </a>
 <a href="test/html/h/newCreditScoreAnimation.html"> 测试 </a>
+<a href="loading/index.html"> loading </a>
 
 </body>
 </html>
