--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <a href="test/html/h/newCreditScoreAnimation.html"> 测试 </a>
 <a href="loading/index.html"> loading </a>
 <a href="preLoadImg/preLoadImg.html"> loading </a>
+<a href=""></a>
 
 <div id="timeCountX" class="time-count-x">
     <svg width="50" height="50" viewBox="0 0 440 440" id="svg">
