--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 <a href="canvas/html/writing.html"> CANVAS </a>
 <a href="http://www.rongcloud.cn/docs/"> 融云 </a>
 <a href="test/html/h/newCreditScoreAnimation.html"> 测试 </a>
+<a href="gitSever/git.html">Centos搭建Git服务器</a>
 <a href="loading/index.html"> loading </a>
 <a href="preLoadImg/preLoadImg.html"> loading </a>
-<a href=""></a>
+a
 
 <div id="timeCountX" class="time-count-x">
     <svg width="50" height="50" viewBox="0 0 440 440" id="svg">
