--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a href="test/html/h/newCreditScoreAnimation.html"> 测试 </a>
 <a href="gitSever/git.html">Centos搭建Git服务器</a>
 <a href="loading/index.html"> loading </a>
-<a href="preLoadImg/preLoadImg.html"> loading </a>
+<a href="preLoadImg/preLoadImg.html">图片预加载</a>
 a
 
 <div id="timeCountX" class="time-count-x">
