--- a/audio/ddd.html
+++ b/audio/ddd.html
@@ -1,65 +1,127 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Document</title>
     <style>
-        #div {
-            width: 100%;
-            height: 300px;
-            border: 1px solid blue;
-            overflow: scroll;
+        * {
+            margin: 0;
+            padding: 0;
         }
-        .child {
-            height: 600px;
+        .people_container{
+            width: 14px;
+            height: 20px;
+            /*animation-name: ani;*/
+            animation-duration: 1s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+            animation-direction: alternate;
+            animation-fill-mode: both;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        .people_container1 {
+            left: 14px;
+            animation-delay: 1s;
+        }
+        .people {
+            width: 14px;
+            height: 20px;
+            background-image: url('people.gif');
+            background-repeat: no-repeat;
+            /*animation: myAni 200ms infinite step-start;*/
+            /*animation-fill-mode: both;*/
+        }
+        @keyframes myAni {
+            25% {
+                background-position: 0 0;
+            }
+            50% {
+                background-position: 0 -30px;
+            }
+            75% {
+                background-position: 0 -60px;
+            }
+            100% {
+                background-position: 0 0;
+            }
+        }
+
+        @keyframes ani {
+            0% {
+                background-position: 0 0;
+                left: 0
+            }
+            50% {
+                background-position: 0 -30px;
+                top: 20px;
+            }
+            100% {
+                background-position: 0 -60px;
+                top: 40px;
+            }
+        }
+
+        .love {
+            width: 40px;
+            height: 40px;
+            background-color: red;
+            position: absolute;
+            transform: rotate(45deg) translate(50%);
+            border-bottom-right-radius: 5px;
+            display: none;
+        }
+        .love:after {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
             background: red;
+            transform: translate(0, -50%);
+            border-radius: 50%;
+        }
+        .love:before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: red;
+            transform: translate(-50%, 0);
+            border-radius: 50%;
         }
     </style>
+
 </head>
 <body>
-<div id="dv"><a href="zyzscheme://">asdgasg55555asgasgas</a>
+<div class="people_container">
+    <div class="people"></div>
 </div>
-<div id="div">
-    <div class="child">
-        2
-        2
-        2
-        2
-    </div>
+
+<div class="people_container people_container1">
+    <div class="people"></div>
 </div>
+
+<div class="love"></div>
+<input id="url" value="alsjdglajsglaj" readonly/>
+
+<button id="clip_button" class="copyBtn" data-clipboard-action="copy" data-clipboard-target="#url" onClick="copyLink()">复制链接</button>
+<script src="clipboard.min.js"> </script>
 <script>
-    window.location.href = 'zyzscheme://?roomId=99999';
-    dv.click();
-    var xx,yy,XX,YY,swipeX,swipeY ;
-    div.addEventListener('touchstart',function(event){
-        event.stopPropagation();//阻止冒泡
-//        event.preventDefault();//阻止浏览器默认事件
-        xx = event.targetTouches[0].screenX ;
-        yy = event.targetTouches[0].screenY ;
-        swipeX = true;
-        swipeY = true ;
-    })
-    div.addEventListener('touchmove',function(event){
-        XX = event.targetTouches[0].screenX ;
-        YY = event.targetTouches[0].screenY ;
-        if(swipeX && Math.abs(XX-xx)-Math.abs(YY-yy)>0)  //左右滑动
-        {
-            console.log('zy')
-            event.stopPropagation();//阻止冒泡
-            event.preventDefault();//阻止浏览器默认事件
-            swipeY = false ;
-            //左右滑动
-        }
-        else if(swipeY && Math.abs(XX-xx)-Math.abs(YY-yy)<0){  //上下滑动
-            console.log('sx')
-            swipeX = false ;
-            //上下滑动，使用浏览器默认的上下滑动
-        }
-    })
-    div.addEventListener('touchend',function(event){
-        event.stopPropagation();//阻止冒泡
-        event.preventDefault();//阻止浏览器默认事件
-    })
+        copyLink();
+    function copyLink(){
+        console.log('asdga');
+        var clipboard = new ClipboardJS('#clip_button');
+        clipboard.on('success', function(e) {
+            console.log(e)
+        });
+        clipboard.on('error', function(e) {
+            console.log(e);
+        });
+    }
 </script>
 </body>
 </html>
