--- a/jqueryDate/index.html
+++ b/jqueryDate/index.html
@@ -5,6 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>date demo</title>
 	<style type="text/css">
+		html{
+			width:100%;
+			height: 100%;
+		}
+		body{
+			width:100%;
+			height:100%;
+			position: fixed;
+		}
 		strong{
 			font-size: 15px;
 		}
@@ -14,9 +23,13 @@
 			background-color: #f6f8fa;
 			border-radius: 3px;
 		}
+		#d-mask{
+			position: absolute !important;
+		}
 	</style>
 </head>
 <body>
+<div style="background: black;height: 150%;"></div>
 	<input type="text" id="date" data-options="{'type':'YYYY-MM','beginYear':2010,'endYear':2088}" style="width:166px;height:19px;">
 	<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 	<script src="jquery.date.js"></script>
