new change for canvasAnimation

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <a href="loading/index.html"> loading </a>
 <a href="preLoadImg/preLoadImg.html">图片预加载</a>
 <a href="CSS3/css.html">CSS3</a>
+<a href="nodeJs/node.html">nodeJs</a>
+<a href="webpack/webpack.html">webpack</a>
 
 <p>chmod -R a+rwx ./node_modules</p>
 
