--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 </head>
 <body>
 
+<a href="http://www.webhek.com/post/html5-canvas-cheat-sheet.html">canvas速查表</a>
+
 <a href="mac/mac.html"> MAC </a>
 <a href="canvas/html/writing.html"> CANVAS </a>
 <a href="http://www.rongcloud.cn/docs/"> 融云 </a>
@@ -55,6 +57,8 @@
 <a href="CSS3/css.html">CSS3</a>
 <a href="nodeJs/node.html">nodeJs</a>
 <a href="webpack/webpack.html">webpack</a>
+
+<iframe src="http://erwen.aihuawen.com/zqImageLoader/loader.html" frameborder="0" style="width: 200px;height: 200px"></iframe>
 
 <p>chmod -R a+rwx ./node_modules</p>
 
