--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
     <title>写一个字</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 <script src="zq.js"></script>
