--- a/mac/mac.html
+++ b/mac/mac.html
@@ -18,7 +18,7 @@
 <div class="content">
     <img class="mac_change_name" src="image/mac1.jpg" alt="更改个人的目录名称">
 </div>
-<h1 class="title">Mac系统的包管理软件(Homebrew)安装</h1>
+<h1 class="title">Mac系统的包管理软件(Homebrew)安装3</h1>
 <div class="content">
     <div>安装: ruby -e "$(curl --insecure -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"</div>
     <div>卸载: ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall)"</div>
