--- a/gitSever/git.html
+++ b/gitSever/git.html
@@ -7,5 +7,6 @@
 <body>
 <a href="list/useradd.html">useradd和groupadd 详解</a>
 <h4>Git服务器的搭建 参考 <a href="http://www.runoob.com/git/git-server.html">文件</a></h4>
+<h4>git清除本地缓存命令 git rm -r --cached .</h4>
 </body>
 </html>
