--- a/mac/mac.html
+++ b/mac/mac.html
@@ -27,6 +27,10 @@
 <div class="content">
     py2app 和 pyinstaller
 </div>
+<h1 class="title">Mac生成icns图片</h1>
+<div class="content">
+    <img src="./image/icnsImg.png" alt="">
+</div>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
