--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <style>
     html{
         font-size: 16px;
@@ -40,7 +40,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,height=device-height,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0" >
-    <title>写一个字</title>
+    <title>我的</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 </head>
 <body>
