--- a/H5新api/h5新属性.html
+++ b/H5新api/h5新属性.html
@@ -34,8 +34,8 @@
 <p class="uppercase">This is some text in a paragraph.</p>
 <p class="lowercase">This is some text in a paragraph.</p>
 <p class="capitalize">This is some text in a paragraph.</p>
+<sup>adsfaslj</sup>
 <script>
-
     function lonLatCalc(obj1, obj2) {
         var Lat1 = rad(obj1.lat); // 纬度
         var Lat2 = rad(obj2.lat);
