--- a/ES6/download.html
+++ b/ES6/download.html
@@ -8,12 +8,12 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-<input type="button" value="download image" onclick="DownLoadReportIMG('http://www.oursss.com/uploads/photo/1045_2590.jpg?rd=0.9961522558898981');">
 <script>
     function DownLoadReportIMG(imgPathURL) {
+      alert(imgPathURL)
         //如果隐藏IFRAME不存在，则添加
-        if (!document.getElementById(“IframeReportImg”))
-        $(‘‘).appendTo(“body”);
+        if (!document.getElementById('IframeReportImg'))
+        $('').appendTo(body);
 
         if (document.all.IframeReportImg.src != imgPathURL) {
             //加载图片
@@ -29,5 +29,6 @@
         document.frames(“IframeReportImg”).document.execCommand(“SaveAs”);
     }
 </script>
+<input type="button" value="download image" onclick="DownLoadReportIMG('http://www.oursss.com/uploads/photo/1045_2590.jpg?rd=0.9961522558898981')">
 </body>
 </html> 
