--- a/js.html
+++ b/js.html
@@ -15,13 +15,11 @@
 @keyframes bg{50%{background:#655;}}
 
 .pie{
-  width: 100px;height: 100px;
+  width: 40px;height: 100px;
   position:relative;
-  background-color: yellowgreen;
-  border-radius: 50%;
-  background-image: linear-gradient(to right, transparent 50%,#655 0);
+  background-image: linear-gradient(270deg, transparent 5%,#655 0);
 }
-.pie:before{
+/* .pie:before{
   content:'';
   position:absolute;
   top: 0;left: 50%;
@@ -34,7 +32,7 @@
 }
 .pie:hover:before{
   animation-play-state: running;
-}
+} */
 </style>
 <div class="pie"></div>
 </body>
