--- a/learn/SVG/svg.html
+++ b/learn/SVG/svg.html
@@ -25,6 +25,10 @@
     xmlns:xlink="http://www.w3.org/1999/xlink">
     <g id="code"></g>
   </svg>
+  <script>
+    console.log(99);
+    console.log(99);
+  </script>
 </body>
 
 </html>
